--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Bed/Aurora King Bed.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Bed/Aurora King Bed.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "79317d2a-7bb5-4b53-808e-7e4e465399fd"
 Parent: "16807766-6013-4944-9550-ebc3216ad248"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -28,7 +28,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/b6ceb74e50dc40c8a771061ddc2b3514?v=d0d53db1" dam-id="sLZX5duPTseD3f5CbXq8mQ" width="1536" height="1024" alt="aurora-king-bed-1.png" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79374/thumbnail" />
+    <image mediaid="8a17859e-7d79-4a9f-b5d7-88b9d3c6b0df" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -38,7 +38,7 @@ SharedFields:
   Value: "{16807766-6013-4944-9550-EBC3216AD248}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "af2f0a41-8ef2-4a39-a7b2-6ef18db05cb1"
+  Value: "c967d2f6-75be-41d4-a20b-bd28d0d4a0c8"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -68,21 +68,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T125955Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Aurora King Bed | Forma Lux – Luxury Velvet Bed with Tufted Headboard
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: "A luxurious king-size bed with a tufted headboard."
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Aurora King Bed, luxury bedroom furniture, tufted headboard, velvet bed, king bed gold, black velvet bed, modern bed design, Forma Lux shop
+      Value: High-fluoride varnish formulated for fast setting and durable protection.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 1299
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Aurora King Bed
+      Value: ShieldGuard Fluoride Varnish
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -91,199 +85,19 @@ Languages:
       Hint: __Created by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Sleep in style with the Aurora King Bed by Forma Lux. A tall tufted headboard, premium velvet upholstery, and a solid wooden frame bring refined comfort and timeless elegance to your bedroom.
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "6851bbc2-9267-4eb4-afce-9a5922e296b6"
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Aurora King Bed
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251226T150610Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>The Aurora King Bed is designed for ultimate comfort and elegance. Its tall, tufted headboard adds a touch of grandeur, while the sturdy wooden frame ensures durability. Upholstered in premium velvet, it transforms any bedroom into a sanctuary.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "The Aurora King Bed represents the pinnacle of Forma Lux’s craftsmanship—where luxury meets serenity. Designed to be both a statement and a sanctuary, its grand tufted headboard and plush velvet finish evoke boutique-hotel sophistication. Available in Gold or Black, and in Large or Extra Large sizes, Aurora transforms everyday rest into an experience of indulgence and artistry, grounding modern interiors in warmth, texture, and lasting quality."
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125955Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Cama King Aurora | Forma Lux – Cama de Lujo de Terciopelo con Cabecero Acolchado
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Una cama king de lujo con un cabecero acolchado.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Cama King Aurora, muebles de dormitorio de lujo, cabecero acolchado, cama de terciopelo, cama king oro, cama de terciopelo negro, diseño de cama moderna, tienda Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1299
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Cama King Aurora
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Duerme con estilo con la Cama King Aurora de Forma Lux. Un cabecero alto y acolchado, tapicería de terciopelo premium y un marco de madera maciza aportan comodidad refinada y elegancia atemporal a tu dormitorio.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "fbe316d4-2afb-473c-ae8a-0226fa936018"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
+      Value: "c12720ee-0868-4ba1-b0f7-d2acf429b4e4"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Cama King Aurora
+      Value: ShieldGuard Fluoride Varnish
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251219T104426Z
+      Value: 20251017T150639Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
-      Value: <p>La Cama King Aurora está diseñada para ofrecer la máxima comodidad y elegancia. Su cabecero alto y acolchado añade un toque de grandeza, mientras que el resistente marco de madera garantiza durabilidad. Tapizada en terciopelo premium, transforma cualquier dormitorio en un santuario.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: La Cama King Aurora representa la cúspide de la artesanía de Forma Lux, donde el lujo se encuentra con la serenidad. Diseñada para ser tanto una declaración como un santuario, su grandioso cabecero acolchado y su acabado de terciopelo evocan la sofisticación de un hotel boutique. Disponible en Oro o Negro, y en tamaños Grande o Extra Grande, Aurora transforma el descanso diario en una experiencia de indulgencia y arte, anclando los interiores modernos en calidez, textura y calidad duradera.
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125955Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lit King Aurora | Forma Lux – Lit en velours de luxe avec tête de lit capitonnée
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: "Un lit king-size luxueux avec une tête de lit capitonnée."
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lit King Aurora, mobilier de chambre de luxe, tête de lit capitonnée, lit en velours, lit king or, lit en velours noir, design de lit moderne, boutique Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1299
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lit King Aurora
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Dormez avec style avec le lit King Aurora de Forma Lux. Une haute tête de lit capitonnée, un revêtement en velours de qualité supérieure et un cadre en bois massif apportent confort raffiné et élégance intemporelle à votre chambre.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "0844c586-33d2-43a9-b926-fc86f2147bed"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Lit King Aurora
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110231Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>Le lit King Aurora est conçu pour un confort et une élégance ultimes. Sa haute tête de lit capitonnée ajoute une touche de grandeur, tandis que le cadre en bois robuste assure la durabilité. Rembourré en velours de qualité supérieure, il transforme toute chambre en sanctuaire.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Le lit King Aurora représente le summum de l'artisanat de Forma Lux—où le luxe rencontre la sérénité. Conçu pour être à la fois une déclaration et un sanctuaire, sa grande tête de lit capitonnée et sa finition en velours somptueux évoquent la sophistication des hôtels-boutiques. Disponible en or ou noir, et en tailles grande ou très grande, Aurora transforme le repos quotidien en une expérience d'indulgence et d'art, ancrant les intérieurs modernes dans la chaleur, la texture et la qualité durable."
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125955Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lit King Aurora | Forma Lux – Lit en velours de luxe avec tête de lit capitonnée
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: "Un lit king-size luxueux avec une tête de lit capitonnée."
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lit King Aurora, mobilier de chambre de luxe, tête de lit capitonnée, lit en velours, lit king or, lit en velours noir, design de lit moderne, boutique Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1299
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lit King Aurora
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Dormez avec style avec le lit King Aurora de Forma Lux. Une haute tête de lit capitonnée, un revêtement en velours de qualité supérieure et un cadre en bois massif apportent confort raffiné et élégance intemporelle à votre chambre.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "59482f08-72ab-41f3-b954-d86cfc640fa4"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Lit King Aurora
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104107Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>Le lit King Aurora est conçu pour un confort et une élégance ultimes. Sa haute tête de lit capitonnée ajoute une touche de grandeur, tandis que le cadre en bois robuste assure la durabilité. Rembourré en velours de qualité supérieure, il transforme toute chambre en sanctuaire.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Le lit King Aurora représente le summum de l'artisanat de Forma Lux—où le luxe rencontre la sérénité. Conçu pour être à la fois une déclaration et un sanctuaire, sa grande tête de lit capitonnée et sa finition en velours somptueux évoquent la sophistication des hôtels-boutiques. Disponible en or ou noir, et en tailles Large ou Extra Large, Aurora transforme le repos quotidien en une expérience d'indulgence et d'art, ancrant les intérieurs modernes dans la chaleur, la texture et la qualité durable."
+      Value: <p>High-fluoride varnish formulated for fast setting and durable protection.</p>
