--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Sofa/Brooklyn Sleeper Sofa.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Sofa/Brooklyn Sleeper Sofa.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "ade52c7c-162b-49cc-937f-1e5149233e9a"
 Parent: "078d4751-d125-408a-9ff2-f5417844b877"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -25,7 +25,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/c6156eff779d403d920bfaccc7b28c92?v=defd6b05" dam-id="Fe_iCLzrSXeYaCOjwYDrIQ" width="768" height="768" alt="brooklyn-sleeper-sofa.webp" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79375/thumbnail" />
+    <image mediaid="7143ce2d-5fa6-4c30-bcd3-ac5375185602" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -35,7 +35,7 @@ SharedFields:
   Value: "{078D4751-D125-408A-9FF2-F5417844B877}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "4c00a28c-470b-4ee1-a786-76ddad883ac7"
+  Value: "c1e546e5-a0db-4aad-952c-caea8d8d2c5d"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -62,21 +62,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T131324Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Brooklyn Sleeper Sofa | Forma Lux – Convertible Sofa Bed for Modern Living
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: A convertible sofa that doubles as a bed.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Brooklyn Sleeper Sofa, convertible sofa bed, sleeper sofa, modern furniture, compact living, durable upholstery, Forma Lux shop, multifunctional furniture
+      Value: Light-body wash material for fine detail capture.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 1099
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Brooklyn Sleeper Sofa
+      Value: ExactLite VPS Light Body
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -87,185 +81,17 @@ Languages:
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "7eced053-00a8-47d5-bc1a-ce17de358cc2"
+      Value: "8cdde3e1-8970-443d-956f-1c5ed2784068"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
-        sitecore\isuru.bandara@sitecore.com
+        sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Brooklyn Sleeper Sofa
+      Value: ExactLite VPS Light Body
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251226T153000Z
+      Value: 20251017T153556Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
       Value: "<p>The Brooklyn Sleeper Sofa is perfect for small spaces. With a simple pull-out mechanism, it transforms into a comfortable bed. Upholstered in durable fabric, it’s ideal for overnight guests.</p>"
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Designed for flexibility without compromise, the Brooklyn Sleeper Sofa reflects Forma Lux’s philosophy of purposeful design. With a smooth pull-out mechanism and soft, durable upholstery, it transitions effortlessly from daytime lounging to nighttime comfort. Ideal for apartments and guest rooms, Brooklyn balances practicality with refined aesthetics. Available in Indigo and Large size, it’s the perfect union of form, function, and quiet luxury — a true testament to how modern furniture can adapt beautifully to contemporary living."
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131324Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Sofá Cama Brooklyn | Forma Lux – Sofá Cama Convertible para Vida Moderna
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un sofá convertible que también funciona como cama.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Sofá Cama Brooklyn, sofá cama convertible, sofá cama, muebles modernos, vida compacta, tapicería duradera, tienda Forma Lux, muebles multifuncionales
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1099
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Sofá Cama Brooklyn
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "40df7e4d-2055-411d-9f7e-07251df853c7"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Sofá Cama Brooklyn
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251219T104435Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>El Sofá Cama Brooklyn es perfecto para espacios pequeños. Con un simple mecanismo de extracción, se transforma en una cama cómoda. Tapizado en tela duradera, es ideal para invitados nocturnos.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Diseñado para la flexibilidad sin comprometer, el Sofá Cama Brooklyn refleja la filosofía de diseño intencionado de Forma Lux. Con un mecanismo de extracción suave y una tapicería suave y duradera, se transforma sin esfuerzo de un lugar de descanso diurno a un confort nocturno. Ideal para apartamentos y habitaciones de invitados, Brooklyn equilibra la practicidad con una estética refinada. Disponible en tamaño grande y color índigo, es la unión perfecta de forma, función y lujo discreto — un verdadero testimonio de cómo los muebles modernos pueden adaptarse bellamente a la vida contemporánea.
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131324Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: "Canapé-lit Brooklyn | Forma Lux – Canapé-lit convertible pour un mode de vie moderne"
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un canapé convertible qui fait aussi office de lit.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: "Canapé-lit Brooklyn, canapé-lit convertible, canapé-lit, mobilier moderne, vie compacte, revêtement durable, boutique Forma Lux, mobilier multifonctionnel"
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1099
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: "Canapé-lit Brooklyn"
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "30b9c169-601b-451d-92dd-0eaab323f41a"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: "Canapé-lit Brooklyn"
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110242Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: "<p>Le canapé-lit Brooklyn est parfait pour les petits espaces. Avec un simple mécanisme de déploiement, il se transforme en un lit confortable. Recouvert d'un tissu durable, il est idéal pour les invités de nuit.</p>"
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Conçu pour la flexibilité sans compromis, le canapé-lit Brooklyn reflète la philosophie de Forma Lux en matière de design réfléchi. Avec un mécanisme de déploiement fluide et un revêtement doux et durable, il passe sans effort du salon de jour au confort nocturne. Idéal pour les appartements et les chambres d'amis, Brooklyn équilibre la praticité avec une esthétique raffinée. Disponible en Indigo et en grande taille, c'est l'union parfaite de la forme, de la fonction et du luxe discret — un véritable témoignage de la façon dont le mobilier moderne peut s'adapter magnifiquement à la vie contemporaine."
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131324Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: "Canapé-lit Brooklyn | Forma Lux – Canapé-lit convertible pour un mode de vie moderne"
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un canapé convertible qui fait également office de lit.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: "Canapé-lit Brooklyn, canapé-lit convertible, canapé-lit, mobilier moderne, vie compacte, revêtement durable, boutique Forma Lux, mobilier multifonctionnel"
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1099
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: "Canapé-lit Brooklyn"
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "f47e739c-253a-4f6c-9b49-49f6bfda895a"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: "Canapé-lit Brooklyn"
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104116Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: "<p>Le canapé-lit Brooklyn est parfait pour les petits espaces. Avec un simple mécanisme de déploiement, il se transforme en un lit confortable. Revêtu d'un tissu durable, il est idéal pour les invités de nuit.</p>"
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Conçu pour la flexibilité sans compromis, le canapé-lit Brooklyn reflète la philosophie de Forma Lux en matière de design réfléchi. Avec un mécanisme de déploiement fluide et un revêtement doux et durable, il passe sans effort du salon de jour au confort nocturne. Idéal pour les appartements et les chambres d'amis, Brooklyn équilibre la praticité avec une esthétique raffinée. Disponible en Indigo et en grande taille, c'est l'union parfaite de la forme, de la fonction et du luxe discret — un véritable témoignage de la façon dont le mobilier moderne peut s'adapter magnifiquement à la vie contemporaine."
