--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Sofa/Madrid Sectional Sofa.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Sofa/Madrid Sectional Sofa.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "02b85f2c-098f-4736-95ea-bd8776beeca2"
 Parent: "078d4751-d125-408a-9ff2-f5417844b877"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -30,7 +30,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/87b5cec2af9b486cbb80806784647324?v=31eb32ae" dam-id="nPgzhq_5QmKoqxrehJ-rvw" width="357" height="200" alt="madrid-sectional-sofa-1.webp" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79471/thumbnail" />
+    <image mediaid="929b4212-caa8-4885-a12e-9a40ffc4d837" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -40,7 +40,7 @@ SharedFields:
   Value: "{078D4751-D125-408A-9FF2-F5417844B877}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "22da4f6b-ddab-4127-b049-dc9cd1fcc1d5"
+  Value: "9dd6a727-faf1-4309-b4a4-cd20463f65a4"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -67,21 +67,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T130943Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: "Madrid Sectional Sofa | Forma Lux – Spacious L-Shaped Sofa with Chaise Lounge"
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: A spacious sectional sofa with a chaise lounge.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: "Madrid Sectional Sofa, L-shaped sofa, sectional couch, chaise lounge, family sofa, modern living room furniture, durable upholstery, Forma Lux shop"
+      Value: Rigid, autoclavable tray for high-accuracy impressions.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 1499
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Madrid Sectional Sofa
+      Value: ProTray Stainless Steel Full Arch Tray
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -90,199 +84,19 @@ Languages:
       Hint: __Created by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: "The Madrid Sectional Sofa by Forma Lux combines generous seating with refined design. Its L-shaped form and chaise lounge create the perfect balance of comfort, versatility, and modern style."
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "8728204e-ada5-45e8-a5dd-832eaf4bb249"
+      Value: "e5d45d3d-ea6d-4f09-8198-426032358ccc"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
-        sitecore\isuru.bandara@sitecore.com
+        sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Madrid Sectional Sofa
+      Value: ProTray Stainless Steel Full Arch Tray
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251229T055203Z
+      Value: 20251017T154206Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
       Value: "<p>The Madrid Sectional Sofa offers ample seating with its L-shaped design. Upholstered in durable polyester, it’s perfect for family gatherings and movie nights. The chaise lounge adds extra comfort.</p>"
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Expansive and inviting, the Madrid Sectional Sofa embodies Forma Lux’s philosophy of effortless comfort and crafted function. Its L-shaped silhouette and integrated chaise lounge provide ample space for gatherings, while durable polyester upholstery ensures longevity and softness. Available in Black, Indigo, and White, and in Large or Extra Large sizes, Madrid is designed for connection — whether for lively family moments or quiet evenings in. It’s a study in balance: generous proportions, minimalist form, and enduring comfort."
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T130943Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Sofá Seccional Madrid | Forma Lux – Sofá Espacioso en Forma de L con Chaise Longue
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un sofá seccional espacioso con una chaise longue.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Sofá Seccional Madrid, sofá en forma de L, sofá seccional, chaise longue, sofá familiar, muebles modernos para sala de estar, tapicería duradera, tienda Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1499
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Sofá Seccional Madrid
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: El Sofá Seccional Madrid de Forma Lux combina un asiento generoso con un diseño refinado. Su forma en L y chaise longue crean el equilibrio perfecto de comodidad, versatilidad y estilo moderno.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "9c4c520a-e4fb-4aee-ba3e-2b43baa98df2"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Sofá Seccional Madrid
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251219T104435Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>El Sofá Seccional Madrid ofrece un amplio espacio para sentarse con su diseño en forma de L. Tapizado en poliéster duradero, es perfecto para reuniones familiares y noches de cine. La chaise longue añade comodidad extra.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Amplio y acogedor, el Sofá Seccional Madrid encarna la filosofía de Forma Lux de comodidad sin esfuerzo y función elaborada. Su silueta en forma de L y chaise longue integrada proporcionan un amplio espacio para reuniones, mientras que la tapicería de poliéster duradera garantiza longevidad y suavidad. Disponible en Negro, Índigo y Blanco, y en tamaños Grande o Extra Grande, Madrid está diseñado para la conexión, ya sea para momentos familiares animados o noches tranquilas. Es un estudio en equilibrio: proporciones generosas, forma minimalista y comodidad duradera."
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T130943Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Canapé sectionnel Madrid | Forma Lux – Canapé spacieux en forme de L avec méridienne
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un canapé sectionnel spacieux avec une méridienne.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Canapé sectionnel Madrid, canapé en L, canapé sectionnel, méridienne, canapé familial, mobilier de salon moderne, revêtement durable, boutique Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1499
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Canapé sectionnel Madrid
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Le canapé sectionnel Madrid de Forma Lux combine un espace généreux avec un design raffiné. Sa forme en L et sa méridienne créent l'équilibre parfait entre confort, polyvalence et style moderne.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "591e4d16-e5bb-4b2f-b3bf-2b8394f7d9ca"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Canapé sectionnel Madrid
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110242Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>Le canapé sectionnel Madrid offre un espace assis ample avec son design en L. Rembourré en polyester durable, il est parfait pour les réunions de famille et les soirées cinéma. La méridienne ajoute un confort supplémentaire.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Vaste et accueillant, le canapé sectionnel Madrid incarne la philosophie de Forma Lux d'un confort sans effort et d'une fonction bien conçue. Sa silhouette en L et sa méridienne intégrée offrent un espace ample pour les rassemblements, tandis que le revêtement en polyester durable assure longévité et douceur. Disponible en noir, indigo et blanc, et en tailles grande ou très grande, Madrid est conçu pour la connexion — que ce soit pour des moments familiaux animés ou des soirées tranquilles. C'est une étude en équilibre : proportions généreuses, forme minimaliste et confort durable."
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T130943Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Canapé Sectionnel Madrid | Forma Lux – Canapé spacieux en forme de L avec méridienne
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un canapé sectionnel spacieux avec une méridienne.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Canapé Sectionnel Madrid, canapé en forme de L, canapé sectionnel, méridienne, canapé familial, mobilier de salon moderne, revêtement durable, boutique Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1499
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Canapé Sectionnel Madrid
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Le canapé sectionnel Madrid de Forma Lux combine un espace généreux avec un design raffiné. Sa forme en L et sa méridienne créent l'équilibre parfait entre confort, polyvalence et style moderne.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "6381585a-2e47-4a24-a2c2-51c04a415507"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Canapé Sectionnel Madrid
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104122Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>Le canapé sectionnel Madrid offre un espace de sièges ample avec son design en forme de L. Revêtu de polyester durable, il est parfait pour les réunions de famille et les soirées cinéma. La méridienne ajoute un confort supplémentaire.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Expansif et accueillant, le canapé sectionnel Madrid incarne la philosophie de Forma Lux de confort sans effort et de fonction élaborée. Sa silhouette en forme de L et sa méridienne intégrée offrent un espace ample pour les rassemblements, tandis que le revêtement en polyester durable assure longévité et douceur. Disponible en noir, indigo et blanc, et en tailles grande ou extra grande, Madrid est conçu pour la connexion — que ce soit pour des moments familiaux animés ou des soirées tranquilles. C'est une étude en équilibre : proportions généreuses, forme minimaliste et confort durable."
