--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-data/Data/Product Categories/Bed.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-data/Data/Product Categories/Bed.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "346abc46-a729-4499-93c4-1888b4f54507"
 Parent: "b94938e7-175e-42f4-95f6-d06aef4f27c7"
 Template: "5635eaab-28a6-4783-a10e-c4f9b1b99bba"
@@ -31,7 +31,7 @@ Languages:
       Value: 20250923T145105Z
     - ID: "fe0c006b-d8ca-442a-943a-566a619d913c"
       Hint: CategoryName
-      Value: Bed
+      Value: Preventive Care Products
 - Language: "es-ES"
   Versions:
   - Version: 1
@@ -59,70 +59,7 @@ Languages:
       Value: 20250925T121545Z
     - ID: "fe0c006b-d8ca-442a-943a-566a619d913c"
       Hint: CategoryName
-      Value: cama
-  - Version: 2
-    Fields:
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20250923T145055Z
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "053049c1-4945-4a21-a8e6-0a8744c94cfe"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "c8f93afe-bfd4-4e8f-9c61-152559854661"
-      Hint: __Valid from
-      Value: 
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251219T104342Z
-    - ID: "fe0c006b-d8ca-442a-943a-566a619d913c"
-      Hint: CategoryName
-      Value: Cama
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20250923T145055Z
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "530256ff-4a16-4232-b7a8-861eb00b9b3e"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110151Z
-    - ID: "fe0c006b-d8ca-442a-943a-566a619d913c"
-      Hint: CategoryName
-      Value: Lit
+      Value: Productos de Cuidado Preventivo
 - Language: "fr-FR"
   Versions:
   - Version: 1
@@ -150,4 +87,4 @@ Languages:
       Value: 20250925T121603Z
     - ID: "fe0c006b-d8ca-442a-943a-566a619d913c"
       Hint: CategoryName
-      Value: lit
+      Value: Produits de Soins Préventifs
