--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-data/Data/Promos/Single Image Promo.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-data/Data/Promos/Single Image Promo.yml
@@ -15,10 +15,10 @@ SharedFields:
 - ID: "b441a09f-ddb2-41a8-84cc-2533686541f4"
   Hint: PromoImageOne
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/9a6bf9db267d4064a703ef689b7b3d93?v=5fd517cc" dam-id="r4u8bbZ3SMqqTv3mrEKT-g" width="4000" height="3000" alt="Rectangle 1451.jpg" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/67133/thumbnail" />
+    <image mediaid="356818aa-93e2-4510-bb99-4d25fae2ec23" />
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "fdbaac77-e155-4b7e-89e9-fb59bdfd67ca"
+  Value: "55bbed9b-bebf-4b10-896d-baf3a9edf426"
 Languages:
 - Language: en
   Versions:
@@ -37,7 +37,10 @@ Languages:
     - ID: "4fc0c7b3-bcfb-4a9d-834d-59f6836e5fd6"
       Hint: PromoDescription
       Value: |
-        <div class="ck-content"><p><meta charset="utf-8" /><span style="white-space:pre-wrap;">You don’t have to worry about the result because all of these interiors are made by people who are professionals in their fields with an elegant and luxurious style and with premium quality materials</span></p></div>
+        <div class="ck-content"><p><meta charset="utf-8" /><span style="white-space:pre-wrap;">Our mission is to improve the lives of those we touch by focusing on practice care, so dental professionals can focus on patient care.
+        
+        Practice care is a combination of efficient solutions and integrated technologies designed to help you operate a productive practice, attain your business goals, and assist in the delivery of quality patient care.
+        </span></p></div>
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -51,17 +54,17 @@ Languages:
       Value: 
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "0691b621-f54d-42cc-ba52-dfbe84044f41"
+      Value: "256747a2-08fc-4e5b-a00f-db450cfbe83b"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
-        sitecore\ranula.gamage@sitecore.com
+        sitecore\zach.escabedo@sitecore.com
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251223T145811Z
+      Value: 20251212T153345Z
     - ID: "f7e3056b-5e6e-4080-b2b7-84f76b2052fc"
       Hint: PromoTitle
-      Value: We provide you  the best experience
+      Value: Practice Care Is Our Priority 
 - Language: "es-ES"
   Versions:
   - Version: 1
@@ -101,91 +104,6 @@ Languages:
     - ID: "f7e3056b-5e6e-4080-b2b7-84f76b2052fc"
       Hint: PromoTitle
       Value: Explorar la gama
-  - Version: 2
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20250904T103356Z
-    - ID: "453ed40c-5232-4e90-b023-7a3cee2bcfe8"
-      Hint: PromoMoreInfo
-      Value: |
-        <link class="" target="" title="" linktype="external" text="Más información" url="" />
-    - ID: "4fc0c7b3-bcfb-4a9d-834d-59f6836e5fd6"
-      Hint: PromoDescription
-      Value: |
-        <div class="ck-content"><p><meta charset="utf-8" /><span style="white-space:pre-wrap;">No tienes que preocuparte por el resultado porque todos estos interiores están hechos por personas que son profesionales en sus campos con un estilo elegante y lujoso y con materiales de calidad premium</span></p></div>
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "4ba4afac-a74c-4380-ba44-79c6470792cf"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "c8f93afe-bfd4-4e8f-9c61-152559854661"
-      Hint: __Valid from
-      Value: 
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251219T104352Z
-    - ID: "f7e3056b-5e6e-4080-b2b7-84f76b2052fc"
-      Hint: PromoTitle
-      Value: Te ofrecemos la mejor experiencia
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20250904T103356Z
-    - ID: "453ed40c-5232-4e90-b023-7a3cee2bcfe8"
-      Hint: PromoMoreInfo
-      Value: |
-        <link class="" target="" title="" linktype="external" text="Plus d'infos" url="" />
-    - ID: "4fc0c7b3-bcfb-4a9d-834d-59f6836e5fd6"
-      Hint: PromoDescription
-      Value: |
-        <div class="ck-content"><p><meta charset="utf-8" /><span style="white-space:pre-wrap;">Vous n'avez pas à vous soucier du résultat car tous ces intérieurs sont réalisés par des professionnels dans leur domaine avec un style élégant et luxueux et avec des matériaux de qualité supérieure</span></p></div>
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "324b4cd5-b10d-4264-8dee-9aa4ed02daa7"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110201Z
-    - ID: "f7e3056b-5e6e-4080-b2b7-84f76b2052fc"
-      Hint: PromoTitle
-      Value: Nous vous offrons la meilleure expérience
 - Language: "fr-FR"
   Versions:
   - Version: 1
