--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Chair/Milan Office Chair.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Chair/Milan Office Chair.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "563949d5-9ce4-4bd3-927d-47189e6cac44"
 Parent: "8dd59d14-31a7-4b85-a547-77b03c68ac32"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -31,7 +31,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/62ed734d5d7e4be4bfcd833e416c072e?v=7702ce2f" dam-id="v0gkvzcIQeWYawTXKe2Ovg" width="3000" height="3000" alt="milan-office-chair-1.png" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79483/thumbnail" />
+    <image mediaid="e16e2396-aac4-4fbe-b8e3-4f8ca6b96eda" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -41,7 +41,7 @@ SharedFields:
   Value: "{8DD59D14-31A7-4B85-A547-77B03C68AC32}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "2272f461-fbdf-4fb0-a650-c16102dd283b"
+  Value: "6cf068cf-85ed-4f8c-876d-11e7aa43d8ff"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -68,21 +68,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T125528Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Milan Office Chair | Forma Lux – Ergonomic Office Chair with Adjustable Design
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: A modern ergonomic office chair with adjustable features
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Milan Office Chair, ergonomic office chair, adjustable desk chair, modern workspace furniture, mesh office chair, Forma Lux shop, luxury office seating
+      Value: Anatomic matrix system designed to improve contacts and contours.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 229.99
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Milan Office Chair
+      Value: MatrixFit Sectional Matrix System
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -91,199 +85,19 @@ Languages:
       Hint: __Created by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: The Milan Office Chair by Forma Lux merges ergonomic function with modern elegance. Adjustable height, tilt, and armrests deliver personalized comfort, while a breathable mesh back keeps you cool and focused.
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "db2b7ff3-cb12-46ec-a1b0-e31d32a1d7ef"
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Milan Office Chair
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251229T055647Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>The Milan Office Chair combines sleek design with functionality. Featuring adjustable height, tilt, and armrests, it ensures maximum comfort during long work hours. The breathable mesh back promotes airflow, keeping you cool and focused.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Designed for productivity and poise, the Milan Office Chair exemplifies Forma Lux’s philosophy of intelligent comfort. Its adjustable features—including height, tilt, and armrests—create a customized ergonomic experience, while the breathable mesh back enhances airflow for long hours of focus. Available in Black, Gold, and White, and in Medium, Large, and Extra Large sizes, Milan transforms any workspace into a refined environment of balance, performance, and contemporary design.
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125528Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Silla de Oficina Milan | Forma Lux – Silla de Oficina Ergonómica con Diseño Ajustable
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Una silla de oficina ergonómica moderna con características ajustables
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Silla de Oficina Milan, silla de oficina ergonómica, silla de escritorio ajustable, muebles modernos para espacios de trabajo, silla de oficina de malla, tienda Forma Lux, asientos de oficina de lujo
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 229.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Silla de Oficina Milan
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: La Silla de Oficina Milan de Forma Lux fusiona función ergonómica con elegancia moderna. La altura, inclinación y reposabrazos ajustables ofrecen comodidad personalizada, mientras que un respaldo de malla transpirable te mantiene fresco y concentrado.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "38fd5956-d46f-43cc-a5a6-4b0049c6f3cd"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
+      Value: "c079d2db-9fce-4d52-92f0-8884d8c8ceac"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Silla de Oficina Milan
+      Value: MatrixFit Sectional Matrix System
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251219T104444Z
+      Value: 20251017T155126Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
-      Value: <p>La Silla de Oficina Milan combina diseño elegante con funcionalidad. Con altura, inclinación y reposabrazos ajustables, asegura máxima comodidad durante largas horas de trabajo. El respaldo de malla transpirable promueve el flujo de aire, manteniéndote fresco y concentrado.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Diseñada para la productividad y el aplomo, la Silla de Oficina Milan ejemplifica la filosofía de Forma Lux de confort inteligente. Sus características ajustables, que incluyen altura, inclinación y reposabrazos, crean una experiencia ergonómica personalizada, mientras que el respaldo de malla transpirable mejora el flujo de aire para largas horas de concentración. Disponible en Negro, Dorado y Blanco, y en tamaños Mediano, Grande y Extra Grande, Milan transforma cualquier espacio de trabajo en un entorno refinado de equilibrio, rendimiento y diseño contemporáneo.
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125528Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Chaise de bureau Milan | Forma Lux – Chaise de bureau ergonomique avec design ajustable
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Une chaise de bureau ergonomique moderne avec des caractéristiques ajustables
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Chaise de bureau Milan, chaise de bureau ergonomique, chaise de bureau ajustable, mobilier de bureau moderne, chaise de bureau en maille, boutique Forma Lux, sièges de bureau de luxe
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 229.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Chaise de bureau Milan
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: La chaise de bureau Milan par Forma Lux allie fonction ergonomique et élégance moderne. Hauteur, inclinaison et accoudoirs ajustables offrent un confort personnalisé, tandis qu'un dossier en maille respirante vous garde au frais et concentré.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "b5b29216-a5d4-48f4-8baa-2506e79d2c3f"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Chaise de bureau Milan
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110254Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La chaise de bureau Milan combine un design élégant avec fonctionnalité. Dotée de hauteur, inclinaison et accoudoirs ajustables, elle assure un confort maximal pendant de longues heures de travail. Le dossier en maille respirante favorise la circulation de l'air, vous gardant au frais et concentré.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Conçue pour la productivité et l'élégance, la chaise de bureau Milan illustre la philosophie de Forma Lux de confort intelligent. Ses caractéristiques ajustables, y compris la hauteur, l'inclinaison et les accoudoirs, créent une expérience ergonomique personnalisée, tandis que le dossier en maille respirante améliore la circulation de l'air pour de longues heures de concentration. Disponible en noir, or et blanc, et en tailles moyenne, grande et très grande, Milan transforme tout espace de travail en un environnement raffiné d'équilibre, de performance et de design contemporain.
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125528Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Chaise de bureau Milan | Forma Lux – Chaise de bureau ergonomique avec design ajustable
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Une chaise de bureau ergonomique moderne avec des caractéristiques ajustables
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Chaise de bureau Milan, chaise de bureau ergonomique, chaise de bureau ajustable, mobilier de bureau moderne, chaise de bureau en maille, boutique Forma Lux, siège de bureau de luxe
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 229.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Chaise de bureau Milan
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: La chaise de bureau Milan de Forma Lux allie fonction ergonomique et élégance moderne. Hauteur, inclinaison et accoudoirs réglables offrent un confort personnalisé, tandis qu'un dossier en maille respirante vous garde au frais et concentré.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "011660cc-0ca9-49de-bb16-6939855f4599"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Chaise de bureau Milan
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104122Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La chaise de bureau Milan combine design élégant et fonctionnalité. Dotée de hauteur, inclinaison et accoudoirs ajustables, elle assure un confort maximal pendant de longues heures de travail. Le dossier en maille respirante favorise la circulation de l'air, vous gardant au frais et concentré.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Conçue pour la productivité et l'élégance, la chaise de bureau Milan illustre la philosophie de Forma Lux de confort intelligent. Ses caractéristiques ajustables, y compris la hauteur, l'inclinaison et les accoudoirs, créent une expérience ergonomique personnalisée, tandis que le dossier en maille respirante améliore la circulation de l'air pour de longues heures de concentration. Disponible en noir, or et blanc, et en tailles moyenne, grande et extra grande, Milan transforme tout espace de travail en un environnement raffiné d'équilibre, de performance et de design contemporain.
+      Value: <p>Anatomic matrix system designed to improve contacts and contours.</p>
