--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Chair/Oslo Lounge Chair.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Chair/Oslo Lounge Chair.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "c14b40a5-1c7c-4f24-bdf2-961fb24462e4"
 Parent: "8dd59d14-31a7-4b85-a547-77b03c68ac32"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -25,7 +25,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/9e04cf71ba5c467ab9cb73da5d51164c?v=a708261c" dam-id="2HPszFMNS4iRsMQ4RmakWQ" width="1024" height="910" alt="oslo-lounge-chair-1.webp" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79495/thumbnail" />
+    <image mediaid="9204e7bb-d14b-4489-bf04-9a869766e19f" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -35,7 +35,7 @@ SharedFields:
   Value: "{8DD59D14-31A7-4B85-A547-77B03C68AC32}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "d3223b3d-4df0-4c79-8462-754b4e46e7e7"
+  Value: "098e16da-1013-4bd0-aeee-5c3747a7ced9"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -62,21 +62,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T124722Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Oslo Lounge Chair | Forma Lux – Scandinavian Lounge Chair with Oak Frame
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: "A Scandinavian-inspired lounge chair with a sleek wooden frame and plush cushions."
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Oslo Lounge Chair, Scandinavian chair, Nordic furniture, oak lounge chair, linen upholstery, modern lounge chair, Forma Lux shop, minimalist furniture
+      Value: Stainless-steel instruments for composite placement and shaping.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 349.99
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Oslo Lounge Chair
+      Value: CarveRight Instrument Set
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -85,187 +79,19 @@ Languages:
       Hint: __Created by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: The Oslo Lounge Chair by Forma Lux combines Nordic simplicity with premium comfort. Featuring a solid oak frame and plush linen cushions, it’s a timeless addition to modern interiors.
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "f6551c23-037a-4340-9890-2572e52e65a1"
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Oslo Lounge Chair
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251229T055612Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>The Oslo Lounge Chair blends minimalist Nordic design with modern comfort. Crafted from solid oak and upholstered in premium linen, it offers a timeless silhouette that fits seamlessly into any living space. Its ergonomic backrest and deep seat make it perfect for long hours of relaxation.</p>
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T124722Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Sillón Oslo | Forma Lux – Sillón escandinavo con estructura de roble
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un sillón de inspiración escandinava con una elegante estructura de madera y cojines mullidos.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Sillón Oslo, silla escandinava, muebles nórdicos, sillón de roble, tapicería de lino, sillón moderno, tienda Forma Lux, muebles minimalistas
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 349.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Sillón Oslo
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: El Sillón Oslo de Forma Lux combina la simplicidad nórdica con el confort premium. Con una estructura de roble macizo y cojines de lino mullidos, es una adición atemporal a los interiores modernos.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "3bd2f1ec-20a3-410d-9356-5dc87541bed1"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
+      Value: "46796ba2-50c1-462f-be0e-218fda7a5b60"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Sillón Oslo
+      Value: CarveRight Instrument Set
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251219T104444Z
+      Value: 20251017T155007Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
-      Value: <p>El Sillón Oslo combina el diseño nórdico minimalista con la comodidad moderna. Fabricado en roble macizo y tapizado en lino premium, ofrece una silueta atemporal que se integra perfectamente en cualquier espacio vital. Su respaldo ergonómico y asiento profundo lo hacen perfecto para largas horas de relajación.</p>
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T124722Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Fauteuil Oslo | Forma Lux – Fauteuil scandinave avec cadre en chêne
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un fauteuil inspiré du design scandinave avec un cadre en bois élégant et des coussins moelleux.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Fauteuil Oslo, chaise scandinave, mobilier nordique, fauteuil en chêne, rembourrage en lin, fauteuil moderne, boutique Forma Lux, mobilier minimaliste
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 349.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Fauteuil Oslo
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Le fauteuil Oslo de Forma Lux combine la simplicité nordique avec un confort supérieur. Doté d'un cadre en chêne massif et de coussins en lin moelleux, c'est un ajout intemporel aux intérieurs modernes.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "a5c3057a-71e0-496e-84b8-4b56c5f4a025"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Fauteuil Oslo
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110254Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>Le fauteuil Oslo allie design nordique minimaliste et confort moderne. Fabriqué en chêne massif et recouvert de lin de qualité supérieure, il offre une silhouette intemporelle qui s'intègre parfaitement dans n'importe quel espace de vie. Son dossier ergonomique et son siège profond le rendent parfait pour de longues heures de détente.</p>
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T124722Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Fauteuil Oslo | Forma Lux – Fauteuil scandinave avec cadre en chêne
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un fauteuil inspiré du design scandinave avec un cadre en bois élégant et des coussins moelleux.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Fauteuil Oslo, chaise scandinave, mobilier nordique, fauteuil en chêne, revêtement en lin, fauteuil moderne, boutique Forma Lux, mobilier minimaliste
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 349.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Fauteuil Oslo
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Le fauteuil Oslo de Forma Lux combine la simplicité nordique avec un confort premium. Doté d'un cadre en chêne massif et de coussins en lin moelleux, c'est un ajout intemporel aux intérieurs modernes.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "1c367533-4f2a-4882-9f42-5596d8e838d4"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Fauteuil Oslo
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104122Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>Le fauteuil Oslo allie design nordique minimaliste et confort moderne. Fabriqué en chêne massif et recouvert de lin premium, il offre une silhouette intemporelle qui s'intègre parfaitement dans tout espace de vie. Son dossier ergonomique et son siège profond le rendent parfait pour de longues heures de détente.</p>
+      Value: <p>Stainless-steel instruments for composite placement and shaping.</p>
