--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Chair/Verona Dining Chair.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Chair/Verona Dining Chair.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "48ed924f-3bed-4a74-b589-c2e606a0c285"
 Parent: "8dd59d14-31a7-4b85-a547-77b03c68ac32"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -27,7 +27,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/21a291f6d21648ceb0bddafe5a0d31a6?v=e0f75568" dam-id="4TWXtUpsSb-DU5JI4o5mSA" width="1024" height="910" alt="verona-dining-chair-1.webp" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79566/thumbnail" />
+    <image mediaid="be737685-4430-452f-8895-4706ee42a2b8" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -37,7 +37,7 @@ SharedFields:
   Value: "{8DD59D14-31A7-4B85-A547-77B03C68AC32}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "cc34aa4e-c836-48d0-8541-5dd4b2cdb99b"
+  Value: "378cf2c9-0b04-401e-b053-ea8a0f4aaa70"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -64,21 +64,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T125004Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: "Verona Dining Chair | Forma Lux – Elegant Curved-Back Chair with Upholstered Seat"
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: Elegant dining chair with a curved backrest and upholstered seat.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Verona Dining Chair, dining room furniture, upholstered dining chair, walnut dining chair, modern dining design, comfortable seating, Forma Lux shop, curved back chair
+      Value: Controlled phosphoric acid gel for consistent etching.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 179.5
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Verona Dining Chair
+      Value: EtchMax 37% Etching Gel
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -89,173 +83,17 @@ Languages:
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "d873d8f4-1dc8-44e6-9d8b-4a87e06fe20d"
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Verona Dining Chair
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251229T055542Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: "<p>The Verona Dining Chair is designed for both comfort and sophistication. Its curved backrest provides excellent lumbar support, while the cushioned seat ensures long-lasting comfort during meals. The walnut finish adds warmth to any dining room.</p>"
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125004Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Silla de Comedor Verona | Forma Lux – Elegante Silla con Respaldo Curvado y Asiento Tapizado
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Elegante silla de comedor con respaldo curvado y asiento tapizado.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Silla de Comedor Verona, muebles de comedor, silla de comedor tapizada, silla de nogal, diseño de comedor moderno, asiento cómodo, tienda Forma Lux, silla con respaldo curvado
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 179.5
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Silla de Comedor Verona
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "550f6401-d864-49c9-9de8-132ac26c2218"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
+      Value: "fed65a62-1784-4a38-a536-baa6dda55760"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Silla de Comedor Verona
+      Value: EtchMax 37% Etching Gel
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251219T104444Z
+      Value: 20251017T154855Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
-      Value: <p>La Silla de Comedor Verona está diseñada tanto para el confort como para la sofisticación. Su respaldo curvado proporciona un excelente soporte lumbar, mientras que el asiento acolchado asegura comodidad duradera durante las comidas. El acabado en nogal añade calidez a cualquier comedor.</p>
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125004Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Chaise de salle à manger Verona | Forma Lux – Chaise élégante à dossier courbé avec siège rembourré
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Chaise de salle à manger élégante avec dossier courbé et siège rembourré.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Chaise de salle à manger Verona, meubles de salle à manger, chaise de salle à manger rembourrée, chaise en noyer, design moderne de salle à manger, sièges confortables, boutique Forma Lux, chaise à dossier courbé
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 179.5
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Chaise de salle à manger Verona
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "06938414-e9a3-4da5-9afc-14dd44f5eefa"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Chaise de salle à manger Verona
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110254Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La chaise de salle à manger Verona est conçue pour allier confort et sophistication. Son dossier courbé offre un excellent soutien lombaire, tandis que le siège coussiné assure un confort durable pendant les repas. La finition en noyer ajoute de la chaleur à toute salle à manger.</p>
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T125004Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Chaise de salle à manger Verona | Forma Lux – Chaise élégante à dossier incurvé avec siège rembourré
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Chaise de salle à manger élégante avec dossier incurvé et siège rembourré.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Chaise de salle à manger Verona, mobilier de salle à manger, chaise de salle à manger rembourrée, chaise en noyer, design moderne de salle à manger, assise confortable, boutique Forma Lux, chaise à dossier incurvé
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 179.5
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Chaise de salle à manger Verona
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "75d9541e-d9b0-4c20-9dd6-aa907b5c6ea9"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Chaise de salle à manger Verona
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104122Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La chaise de salle à manger Verona est conçue pour allier confort et sophistication. Son dossier incurvé offre un excellent soutien lombaire, tandis que le siège coussiné assure un confort durable pendant les repas. La finition en noyer ajoute de la chaleur à toute salle à manger.</p>
+      Value: <p>Controlled phosphoric acid gel for consistent etching.</p>
