--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Lamp/Atlas Desk Lamp.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Lamp/Atlas Desk Lamp.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "58a5b3f4-4c67-4c57-bded-0fab80a27088"
 Parent: "260cf295-7d6b-4e12-805c-2596ffd1c3d7"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -28,7 +28,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/7addb20509e349eb986a5a2ae5e99b84?v=7287a7b2" dam-id="miUYP3WnQZKPc6wh9m1TKA" width="1000" height="1000" alt="atlas-desk-lamp-1.webp" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79362/thumbnail" />
+    <image mediaid="23514398-863e-49cf-b575-b0d58ed73ff7" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -38,7 +38,7 @@ SharedFields:
   Value: "{260CF295-7D6B-4E12-805C-2596FFD1C3D7}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "7331fb79-8e90-4155-95ea-7a636c643e4c"
+  Value: "c38f4782-ebfe-4d4e-9de9-53a849a9a3e1"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -65,21 +65,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T151233Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Atlas Desk Lamp | Forma Lux – Adjustable Industrial Task Light for Modern Workspaces
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: A functional desk lamp with adjustable arms.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Atlas Desk Lamp, adjustable desk lamp, industrial lighting, task light, workspace lamp, modern office decor, Forma Lux shop, focused lighting
+      Value: Broad-spectrum wipes for operatory surface disinfection.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 25
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Atlas Desk Lamp
+      Value: SafeGuard Disinfectant Wipes
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -88,187 +82,19 @@ Languages:
       Hint: __Created by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Brighten your workspace with the Atlas Desk Lamp by Forma Lux — an adjustable industrial lamp with pivoting arms that combines precision lighting and sculptural design.
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "00514dda-c856-4b93-8424-d1c3bfd39871"
+      Value: "2177d0a3-30a1-4e3f-b80f-3bb6369d9a5f"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\isuru.bandara@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Atlas Desk Lamp
+      Value: SafeGuard Disinfectant Wipes
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251226T151108Z
+      Value: 20251021T100108Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
-      Value: <p>The Atlas Desk Lamp is designed for productivity. With adjustable arms and a pivoting head, it provides focused task lighting. Its industrial design adds character to workspaces.</p>
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T151233Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lámpara de Escritorio Atlas | Forma Lux – Luz de Tarea Industrial Ajustable para Espacios de Trabajo Modernos
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Una lámpara de escritorio funcional con brazos ajustables.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lámpara de Escritorio Atlas, lámpara de escritorio ajustable, iluminación industrial, luz de tarea, lámpara de espacio de trabajo, decoración de oficina moderna, tienda Forma Lux, iluminación enfocada
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 25
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lámpara de Escritorio Atlas
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Ilumina tu espacio de trabajo con la Lámpara de Escritorio Atlas de Forma Lux — una lámpara industrial ajustable con brazos pivotantes que combina iluminación de precisión y diseño escultórico.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "c519b8ac-3430-499c-9268-8875e6f31046"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Lámpara de Escritorio Atlas
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251219T104427Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La Lámpara de Escritorio Atlas está diseñada para la productividad. Con brazos ajustables y una cabeza pivotante, proporciona iluminación de tarea enfocada. Su diseño industrial añade carácter a los espacios de trabajo.</p>
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T151233Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lampe de Bureau Atlas | Forma Lux – Lampe de Travail Industrielle Réglable pour Espaces de Travail Modernes
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Une lampe de bureau fonctionnelle avec des bras réglables.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lampe de Bureau Atlas, lampe de bureau réglable, éclairage industriel, lampe de travail, lampe d'espace de travail, décor de bureau moderne, boutique Forma Lux, éclairage ciblé
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 25
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lampe de Bureau Atlas
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Éclairez votre espace de travail avec la Lampe de Bureau Atlas par Forma Lux — une lampe industrielle réglable avec des bras pivotants qui combine éclairage de précision et design sculptural.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "0ebe5d5c-6cb6-4476-b20b-4963fe64bc06"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Lampe de Bureau Atlas
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110231Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La Lampe de Bureau Atlas est conçue pour la productivité. Avec des bras réglables et une tête pivotante, elle offre un éclairage de travail ciblé. Son design industriel ajoute du caractère aux espaces de travail.</p>
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T151233Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lampe de Bureau Atlas | Forma Lux – Lampe de Travail Industrielle Réglable pour Espaces de Travail Modernes
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Une lampe de bureau fonctionnelle avec des bras réglables.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lampe de Bureau Atlas, lampe de bureau réglable, éclairage industriel, lampe de travail, lampe d'espace de travail, décoration de bureau moderne, boutique Forma Lux, éclairage ciblé
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 25
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lampe de Bureau Atlas
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Éclairez votre espace de travail avec la Lampe de Bureau Atlas par Forma Lux — une lampe industrielle réglable avec bras pivotants qui combine éclairage de précision et design sculptural.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "d63a9b02-26bc-4ec1-8bee-56fe0eba9187"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Lampe de Bureau Atlas
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104115Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La Lampe de Bureau Atlas est conçue pour la productivité. Avec des bras réglables et une tête pivotante, elle offre un éclairage de travail ciblé. Son design industriel ajoute du caractère aux espaces de travail.</p>
+      Value: <p>Broad-spectrum wipes for operatory surface disinfection.</p>
