--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Lamp/Nova Pendant Lamp.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Lamp/Nova Pendant Lamp.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "a2e66b10-65f2-4b1d-b875-340b45493c84"
 Parent: "260cf295-7d6b-4e12-805c-2596ffd1c3d7"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -26,7 +26,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/c2898ef936d745a681afa39316efe1e1?v=095d0f2b" dam-id="tYCauRxpT-698Y3XzaDqAw" width="1024" height="1536" alt="nova-pendant-lamp-1.png" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79490/thumbnail" />
+    <image mediaid="00174816-617e-4e0a-9731-324a67f32945" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -36,7 +36,7 @@ SharedFields:
   Value: "{260CF295-7D6B-4E12-805C-2596FFD1C3D7}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "82ec51b3-8130-44e1-9603-2fb6c96a9442"
+  Value: "8e0e9dac-d25c-4c97-8144-8c4179db5b29"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -63,21 +63,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T151131Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Nova Pendant Lamp | Forma Lux – Frosted Glass Globe Light with Brass Fixture
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: The Nova Pendant Lamp features a frosted glass globe suspended from a brass fixture
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Nova Pendant Lamp, frosted glass pendant, brass lighting, modern pendant light, dining room lighting, ambient light fixture, Forma Lux shop
+      Value: Protective chair-side barriers designed for single use.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 249
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Nova Pendant Lamp
+      Value: BarrierPro Chair Covers
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -88,185 +82,17 @@ Languages:
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "af776b05-7b80-4fa9-8f08-957131a510cf"
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Nova Pendant Lamp
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251226T151023Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>The Nova Pendant Lamp features a frosted glass globe suspended from a brass fixture. It provides soft, ambient lighting, ideal for dining areas or kitchens.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Refined yet understated, the Nova Pendant Lamp embodies Forma Lux’s approach to light as atmosphere. Its frosted glass globe diffuses warmth, while the brass fixture adds a subtle touch of luxury. Ideal for dining areas or kitchens, Nova balances geometry and glow — turning everyday moments into curated experiences. Available in Gold and in Small or Medium sizes, it’s a timeless accent that brings harmony and intention to modern living.
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T151131Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lámpara Colgante Nova | Forma Lux – Luz de Globo de Vidrio Esmerilado con Montura de Latón
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: La Lámpara Colgante Nova presenta un globo de vidrio esmerilado suspendido de una montura de latón
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lámpara Colgante Nova, lámpara colgante de vidrio esmerilado, iluminación de latón, lámpara colgante moderna, iluminación de comedor, accesorio de luz ambiental, tienda Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 249
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lámpara Colgante Nova
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "5878f81c-8d70-4aff-a8dd-c98f832e233c"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
+      Value: "dcdb545d-d43e-469a-8c73-d4ec7b8da59b"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Lámpara Colgante Nova
+      Value: BarrierPro Chair Covers
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251219T104427Z
+      Value: 20251017T152500Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
-      Value: <p>La Lámpara Colgante Nova presenta un globo de vidrio esmerilado suspendido de una montura de latón. Proporciona una iluminación suave y ambiental, ideal para áreas de comedor o cocinas.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Refinada pero discreta, la Lámpara Colgante Nova encarna el enfoque de Forma Lux hacia la luz como atmósfera. Su globo de vidrio esmerilado difunde calidez, mientras que la montura de latón añade un toque sutil de lujo. Ideal para áreas de comedor o cocinas, Nova equilibra geometría y resplandor, convirtiendo momentos cotidianos en experiencias curadas. Disponible en dorado y en tamaños pequeño o mediano, es un acento atemporal que aporta armonía e intención a la vida moderna.
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T151131Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Suspension Nova | Forma Lux – Globe en verre dépoli avec monture en laiton
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: La suspension Nova présente un globe en verre dépoli suspendu à une monture en laiton
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Suspension Nova, suspension en verre dépoli, éclairage en laiton, suspension moderne, éclairage de salle à manger, luminaire d'ambiance, boutique Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 249
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Suspension Nova
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "df04f3a3-20dc-4ce5-a688-c5d4ba15b953"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Suspension Nova
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110231Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La suspension Nova présente un globe en verre dépoli suspendu à une monture en laiton. Elle offre un éclairage doux et ambiant, idéal pour les salles à manger ou les cuisines.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Raffinée mais discrète, la suspension Nova incarne l'approche de Forma Lux envers la lumière comme atmosphère. Son globe en verre dépoli diffuse une chaleur, tandis que la monture en laiton ajoute une touche subtile de luxe. Idéale pour les salles à manger ou les cuisines, Nova équilibre géométrie et éclat — transformant les moments quotidiens en expériences soignées. Disponible en or et en tailles petite ou moyenne, c'est un accent intemporel qui apporte harmonie et intention à la vie moderne.
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T151131Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lampe Suspendue Nova | Forma Lux – Globe en Verre Givré avec Monture en Laiton
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: La Lampe Suspendue Nova présente un globe en verre givré suspendu à une monture en laiton
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lampe Suspendue Nova, suspension en verre givré, éclairage en laiton, suspension moderne, éclairage de salle à manger, luminaire d'ambiance, boutique Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 249
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lampe Suspendue Nova
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "b53bfd6e-ddd8-4be8-ae9b-240c73bf83d2"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Lampe Suspendue Nova
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104115Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La Lampe Suspendue Nova présente un globe en verre givré suspendu à une monture en laiton. Elle fournit un éclairage doux et ambiant, idéal pour les salles à manger ou les cuisines.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Raffinée mais discrète, la Lampe Suspendue Nova incarne l'approche de Forma Lux de la lumière comme atmosphère. Son globe en verre givré diffuse une chaleur, tandis que la monture en laiton ajoute une touche subtile de luxe. Idéale pour les salles à manger ou les cuisines, Nova équilibre géométrie et éclat — transformant les moments quotidiens en expériences soignées. Disponible en or et en tailles petite ou moyenne, c'est un accent intemporel qui apporte harmonie et intention à la vie moderne.
+      Value: <p>Protective chair-side barriers designed for single use.</p>
