--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Lamp/Orion Floor Lamp.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Lamp/Orion Floor Lamp.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "c6140f88-47dc-4f2d-927e-85262946c68d"
 Parent: "260cf295-7d6b-4e12-805c-2596ffd1c3d7"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -29,7 +29,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/96fbab97f1bb40848acf3e3fbff09b35?v=1f8bf997" dam-id="ZEZTCqo7T1CXNBewA5UNYQ" width="665" height="665" alt="orion-floor-lamp-1.png" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79491/thumbnail" />
+    <image mediaid="28d22a05-db68-4315-a155-ef51922ef528" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -39,7 +39,7 @@ SharedFields:
   Value: "{260CF295-7D6B-4E12-805C-2596FFD1C3D7}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "277459d7-5316-42f5-b204-139c57864fe9"
+  Value: "742558be-a3d9-4b59-89dd-267592a275ed"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -66,21 +66,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T131822Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Orion Floor Lamp | Forma Lux – Minimalist Metal Floor Lamp with Adjustable Head
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: A tall floor lamp with a sleek metal frame
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Orion Floor Lamp, modern floor lamp, adjustable light, minimalist lighting, metal lamp, reading light, living room lighting, Forma Lux shop
+      Value: Full-coverage disposable face shields with anti-fog design.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 199.99
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Orion Floor Lamp
+      Value: IsoClean Face Shields
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -89,199 +83,19 @@ Languages:
       Hint: __Created by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Illuminate your space with the Orion Floor Lamp by Forma Lux – a tall, sleek metal design with an adjustable head that provides focused light for reading or relaxation.
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "a1782510-cd74-4577-b3c1-23f15b024cc6"
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Orion Floor Lamp
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251226T151237Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>The Orion Floor Lamp features a slim, minimalist design with an adjustable head for directional lighting. Perfect for reading corners or modern living rooms.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Streamlined and sophisticated, the Orion Floor Lamp exemplifies Forma Lux’s mastery of purposeful minimalism. Its slim metal frame and adjustable head deliver directional illumination that adapts to mood and moment. Perfect beside a sofa or armchair, Orion adds quiet structure and soft glow to modern interiors. Available in Gold, Black, and White, and in Small or Medium sizes, it’s an elegant statement of light, balance, and craftsmanship.
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131822Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lámpara de Pie Orion | Forma Lux – Lámpara de Pie Metálica Minimalista con Cabezal Ajustable
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Una lámpara de pie alta con un marco de metal elegante
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lámpara de Pie Orion, lámpara de pie moderna, luz ajustable, iluminación minimalista, lámpara de metal, luz de lectura, iluminación para sala de estar, tienda Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 199.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lámpara de Pie Orion
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: "Ilumina tu espacio con la Lámpara de Pie Orion de Forma Lux: un diseño alto y elegante de metal con un cabezal ajustable que proporciona luz focalizada para leer o relajarse."
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "4f5034ec-07b2-4253-b91b-3d8ef7683c1c"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
+      Value: "bdacb8ce-1abe-4aba-835a-9d198a64bd45"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Lámpara de Pie Orion
+      Value: IsoClean Face Shields
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251219T104434Z
+      Value: 20251017T153344Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
-      Value: <p>La Lámpara de Pie Orion presenta un diseño delgado y minimalista con un cabezal ajustable para iluminación direccional. Perfecta para rincones de lectura o salas de estar modernas.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: Estilizada y sofisticada, la Lámpara de Pie Orion ejemplifica la maestría de Forma Lux en el minimalismo intencionado. Su delgado marco de metal y cabezal ajustable ofrecen una iluminación direccional que se adapta al estado de ánimo y al momento. Perfecta junto a un sofá o sillón, Orion añade una estructura discreta y un suave resplandor a los interiores modernos. Disponible en Oro, Negro y Blanco, y en tamaños Pequeño o Mediano, es una declaración elegante de luz, equilibrio y artesanía.
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131822Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lampe de Plancher Orion | Forma Lux – Lampe de Plancher Métallique Minimaliste avec Tête Réglable
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Une lampe de plancher haute avec un cadre métallique élégant
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lampe de Plancher Orion, lampe de plancher moderne, lumière réglable, éclairage minimaliste, lampe métallique, lumière de lecture, éclairage de salon, boutique Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 199.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lampe de Plancher Orion
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Illuminez votre espace avec la Lampe de Plancher Orion par Forma Lux – un design métallique haut et élégant avec une tête réglable qui fournit une lumière ciblée pour la lecture ou la détente.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "6f0c5c56-7d0e-46b0-b343-1da93c769de9"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Lampe de Plancher Orion
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110231Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La Lampe de Plancher Orion présente un design mince et minimaliste avec une tête réglable pour un éclairage directionnel. Parfaite pour les coins lecture ou les salons modernes.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Épurée et sophistiquée, la Lampe de Plancher Orion illustre la maîtrise du minimalisme intentionnel de Forma Lux. Son cadre métallique mince et sa tête réglable offrent un éclairage directionnel qui s'adapte à l'humeur et au moment. Parfaite à côté d'un canapé ou d'un fauteuil, Orion ajoute une structure discrète et une douce lueur aux intérieurs modernes. Disponible en or, noir et blanc, et en tailles petite ou moyenne, c'est une déclaration élégante de lumière, d'équilibre et de savoir-faire."
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131822Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Lampe de sol Orion | Forma Lux – Lampe de sol en métal minimaliste avec tête réglable
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Une lampe de sol haute avec un cadre métallique élégant
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Lampe de sol Orion, lampe de sol moderne, lumière réglable, éclairage minimaliste, lampe en métal, lampe de lecture, éclairage de salon, boutique Forma Lux
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 199.99
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Lampe de sol Orion
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Illuminez votre espace avec la lampe de sol Orion de Forma Lux – un design métallique haut et élégant avec une tête réglable qui fournit une lumière ciblée pour la lecture ou la détente.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "03db7f24-b3cd-4fa1-8c9e-b63768ccc317"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Lampe de sol Orion
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104115Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>La lampe de sol Orion présente un design fin et minimaliste avec une tête réglable pour un éclairage directionnel. Parfaite pour les coins lecture ou les salons modernes.</p>
-    - ID: "e5b1f5b3-a36d-4fd3-8df7-c9878ebfb6cf"
-      Hint: pageSummary
-      Value: "Épurée et sophistiquée, la lampe de sol Orion illustre la maîtrise du minimalisme fonctionnel par Forma Lux. Son cadre métallique fin et sa tête réglable offrent un éclairage directionnel qui s'adapte à l'humeur et au moment. Parfaite à côté d'un canapé ou d'un fauteuil, Orion ajoute une structure discrète et une lueur douce aux intérieurs modernes. Disponible en or, noir et blanc, et en tailles petite ou moyenne, c'est une déclaration élégante de lumière, d'équilibre et de savoir-faire."
+      Value: <p>Full-coverage disposable face shields with anti-fog design.</p>
