--- a/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Sofa/Florence Velvet Sofa.yml
+++ b/authoring/items/industry-verticals/sites/forma-lux/items/site-home/Home/Products/Sofa/Florence Velvet Sofa.yml
@@ -1,4 +1,4 @@
-﻿---
+---
 ID: "19e261ce-e602-4577-8df2-ed75a6427cef"
 Parent: "078d4751-d125-408a-9ff2-f5417844b877"
 Template: "f6e44a9e-074a-4865-987e-0c2dc00b7af5"
@@ -27,7 +27,7 @@ SharedFields:
 - ID: "bf3fd6d5-2930-40a0-9c22-b4fe37f6717f"
   Hint: Image1
   Value: |
-    <Image src="https://starter-verticals.sitecoresandbox.cloud/api/public/content/5a5670cd4d5b4476bb12f9c91c596147?v=39a0be2d" dam-id="9uBPD88JTjiejcmKTkkYrg" width="360" height="360" alt="florence-velvet-sofa-1.png" dam-content-type="Image" thumbnailsrc="https://starter-verticals.sitecoresandbox.cloud/api/gateway/79394/thumbnail" />
+    <image mediaid="1c61dd7f-3f6b-4aef-b89d-a1f26c77e446" />
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
@@ -37,7 +37,7 @@ SharedFields:
   Value: "{078D4751-D125-408A-9FF2-F5417844B877}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "5849a863-ab2d-4662-b209-0310071b811b"
+  Value: "d91ca0b7-9c47-4b50-b4d9-95f83c3da00a"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -64,21 +64,15 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20251016T131147Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: "Florence Velvet Sofa | Forma Lux – Luxurious Chesterfield-Inspired Velvet Sofa"
     - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
       Hint: ShortDescription
-      Value: A luxurious velvet sofa with deep button tufting.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Florence Velvet Sofa, velvet sofa, Chesterfield sofa, tufted couch, luxury living room furniture, hardwood frame, Forma Lux shop, modern classic design
+      Value: Fast-set alginate formulated for smooth mixing and accurate impressions.
     - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
       Hint: Price
       Value: 1299
     - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
       Hint: NavigationTitle
-      Value: Florence Velvet Sofa
+      Value: HydroCast Alginate
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -87,187 +81,19 @@ Languages:
       Hint: __Created by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: The Florence Velvet Sofa by Forma Lux brings refined luxury to modern interiors. Featuring deep tufting, rolled arms, and rich velvet upholstery, it’s a timeless statement of comfort and sophistication.
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "a05a8514-4933-49c8-855f-a2a6f705b221"
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Florence Velvet Sofa
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251229T055054Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: "<p>The Florence Velvet Sofa exudes sophistication with its Chesterfield-inspired design. Upholstered in rich velvet, it features rolled arms, deep tufting, and a sturdy hardwood frame.</p>"
-- Language: "es-ES"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131147Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Sofá de Terciopelo Florence | Forma Lux – Sofá de Terciopelo de Lujo Inspirado en Chesterfield
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un lujoso sofá de terciopelo con profundo capitoné.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Sofá de Terciopelo Florence, sofá de terciopelo, sofá Chesterfield, sofá capitoné, muebles de sala de lujo, estructura de madera dura, tienda Forma Lux, diseño clásico moderno
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1299
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Sofá de Terciopelo Florence
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: El Sofá de Terciopelo Florence de Forma Lux aporta lujo refinado a los interiores modernos. Con un profundo capitoné, brazos enrollados y una rica tapicería de terciopelo, es una declaración atemporal de comodidad y sofisticación.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "17d6ac92-07b7-4dca-8523-8289b3c3a143"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
+      Value: "3c66bb5e-2864-4773-b250-730bdbdcb806"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\movin.tilakaratne@sitecore.com
     - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
       Hint: Title
-      Value: Sofá de Terciopelo Florence
+      Value: HydroCast Alginate
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20251219T104435Z
+      Value: 20251017T153905Z
     - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
       Hint: LongDescription
-      Value: <p>El Sofá de Terciopelo Florence exuda sofisticación con su diseño inspirado en Chesterfield. Tapizado en rico terciopelo, cuenta con brazos enrollados, profundo capitoné y una estructura de madera dura resistente.</p>
-- Language: "fr-CA"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131147Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Sofa en velours Florence | Forma Lux – Sofa luxueux inspiré de Chesterfield en velours
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un sofa en velours luxueux avec un capitonnage profond.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Sofa en velours Florence, sofa en velours, sofa Chesterfield, canapé capitonné, mobilier de salon de luxe, cadre en bois dur, boutique Forma Lux, design classique moderne
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1299
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Sofa en velours Florence
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Le sofa en velours Florence de Forma Lux apporte un luxe raffiné aux intérieurs modernes. Doté de capitonnage profond, d'accoudoirs roulés et d'un riche revêtement en velours, c'est une déclaration intemporelle de confort et de sophistication.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "7ea8672e-c8fa-4235-81da-f54f752bb480"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Sofa en velours Florence
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T110242Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>Le sofa en velours Florence exsude la sophistication avec son design inspiré de Chesterfield. Rembourré en riche velours, il présente des accoudoirs roulés, un capitonnage profond et un cadre en bois dur robuste.</p>
-- Language: "fr-FR"
-  Versions:
-  - Version: 1
-    Fields:
-    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
-      Hint: __Lock
-      Value: <r />
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Hint: __Created
-      Value: 20251016T131147Z
-    - ID: "2f1d30bc-161c-4474-8c72-c959c64a77d3"
-      Hint: metadataTitle
-      Value: Florence Velvet Sofa | Forma Lux – Canapé en velours luxueux inspiré du Chesterfield
-    - ID: "30b20e46-ce60-4993-a2d3-778a61e77331"
-      Hint: ShortDescription
-      Value: Un canapé en velours luxueux avec un capitonnage profond.
-    - ID: "44690751-4b7b-4d8f-a4d5-06af6ce0ff68"
-      Hint: metadataKeywords
-      Value: Canapé en velours Florence, canapé en velours, canapé Chesterfield, canapé capitonné, mobilier de salon de luxe, cadre en bois dur, boutique Forma Lux, design classique moderne
-    - ID: "4d1068af-ad2e-485a-8e61-031ea8464425"
-      Hint: Price
-      Value: 1299
-    - ID: "4e0720e9-9d50-4ddc-87cf-ecd65e8e94c8"
-      Hint: NavigationTitle
-      Value: Canapé en velours Florence
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\movin.tilakaratne@sitecore.com
-    - ID: "61dc9244-b7fd-404a-955f-0a073109276b"
-      Hint: metadataDescription
-      Value: Le canapé en velours Florence de Forma Lux apporte un luxe raffiné aux intérieurs modernes. Doté de capitonnage profond, d'accoudoirs roulés et d'un riche revêtement en velours, c'est une déclaration intemporelle de confort et de sophistication.
-    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
-      Hint: __Revision
-      Value: "f695a49f-9c59-47c2-a409-e8dba3b1e766"
-    - ID: "9857f526-390f-48df-b6d1-1a97cc328e8f"
-      Hint: __Version Name
-      Value: AI translated
-    - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
-      Hint: __Updated by
-      Value: |
-        sitecore\isuru.bandara@sitecore.com
-    - ID: "c97b8c3c-2801-4b14-9bf8-f11ec7ab1d11"
-      Hint: Title
-      Value: Canapé en velours Florence
-    - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
-      Hint: __Updated
-      Value: 20251217T104121Z
-    - ID: "e35644f6-b680-4f40-9c7a-def95adfedda"
-      Hint: LongDescription
-      Value: <p>Le canapé en velours Florence exsude la sophistication avec son design inspiré du Chesterfield. Revêtu de riche velours, il présente des accoudoirs roulés, un capitonnage profond et un cadre en bois dur robuste.</p>
+      Value: <p>Fast-set alginate formulated for smooth mixing and accurate impressions.</p>
